output/cpp/chtl/CHTLParser.cpp

// Generated from CHTL.g4 by ANTLR 4.13.1


#include "CHTLListener.h"

#include "CHTLParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CHTLParserStaticData final {
  CHTLParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CHTLParserStaticData(const CHTLParserStaticData&) = delete;
  CHTLParserStaticData(CHTLParserStaticData&&) = delete;
  CHTLParserStaticData& operator=(const CHTLParserStaticData&) = delete;
  CHTLParserStaticData& operator=(CHTLParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag chtlParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
CHTLParserStaticData *chtlParserStaticData = nullptr;

void chtlParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (chtlParserStaticData != nullptr) {
    return;
  }
#else
  assert(chtlParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<CHTLParserStaticData>(
    std::vector<std::string>{
      "program", "topLevelStatement", "configurationBlock", "configurationItem", 
      "configKey", "configValue", "configValueArray", "configArrayItem", 
      "nameConfigItem", "namespaceDeclaration", "namespaceBody", "namespaceContent", 
      "importStatement", "importType", "importPath", "dottedPath", "templateDeclaration", 
      "templateType", "templateBody", "templateContent", "templateInheritance", 
      "customDeclaration", "customType", "customBody", "customContent", 
      "customInheritance", "customSpecialization", "specializationContent", 
      "deleteStatement", "deleteTarget", "insertStatement", "insertPosition", 
      "elementSelector", "insertContent", "originBlock", "originType", "originContent", 
      "htmlElement", "globalStyleElement", "globalStyleContent", "elementName", 
      "elementIndexAccess", "elementBody", "elementContent", "attribute", 
      "attributeName", "attributeValue", "textContent", "styleBlock", "styleContent", 
      "styleProperty", "propertyName", "propertyValue", "cssSelector", "pseudoClass", 
      "pseudoElement", "cssFunction", "cssArguments", "cssArgument", "scriptBlock", 
      "scriptContent", "elementUsage", "elementSpecialization", "elementSpecializationContent", 
      "styleUsage", "styleSpecialization", "variableDefinition", "variableUsage", 
      "variableArguments", "variableArgument", "variableAssignment", "namespacePath", 
      "exceptConstraint", "exceptTarget", "comment"
    },
    std::vector<std::string>{
      "", "'[Configuration]'", "'{'", "'}'", "'='", "';'", "'[Name]'", "'['", 
      "','", "']'", "'@'", "'[Namespace]'", "'[Import]'", "'from'", "'as'", 
      "'@Html'", "'@Style'", "'@JavaScript'", "'@Chtl'", "'[Custom]'", "'[Template]'", 
      "'.'", "'@Element'", "'@Var'", "'inherit'", "'delete'", "'insert'", 
      "'after'", "'before'", "'replace'", "'at'", "'top'", "'bottom'", "'[Origin]'", 
      "'style'", "'text'", "'script'", "':'", "'-'", "'#'", "'&'", "'::'", 
      "'('", "')'", "'except'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "SINGLE_LINE_COMMENT", 
      "MULTI_LINE_COMMENT", "GENERATOR_COMMENT", "BOOLEAN", "NUMBER", "STRING_LITERAL", 
      "UNQUOTED_LITERAL", "IDENTIFIER", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  chtlParserStaticData = staticData.release();
}

}

CHTLParser::CHTLParser(TokenStream *input) : CHTLParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CHTLParser::CHTLParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CHTLParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *chtlParserStaticData->atn, chtlParserStaticData->decisionToDFA, chtlParserStaticData->sharedContextCache, options);
}

CHTLParser::~CHTLParser() {
  delete _interpreter;
}

const atn::ATN& CHTLParser::getATN() const {
  return *chtlParserStaticData->atn;
}

std::string CHTLParser::getGrammarFileName() const {
  return "CHTL.g4";
}

const std::vector<std::string>& CHTLParser::getRuleNames() const {
  return chtlParserStaticData->ruleNames;
}

const dfa::Vocabulary& CHTLParser::getVocabulary() const {
  return chtlParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CHTLParser::getSerializedATN() const {
  return chtlParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

CHTLParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CHTLParser::ProgramContext::EOF() {
  return getToken(CHTLParser::EOF, 0);
}

std::vector<CHTLParser::TopLevelStatementContext *> CHTLParser::ProgramContext::topLevelStatement() {
  return getRuleContexts<CHTLParser::TopLevelStatementContext>();
}

CHTLParser::TopLevelStatementContext* CHTLParser::ProgramContext::topLevelStatement(size_t i) {
  return getRuleContext<CHTLParser::TopLevelStatementContext>(i);
}


size_t CHTLParser::ProgramContext::getRuleIndex() const {
  return CHTLParser::RuleProgram;
}

void CHTLParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void CHTLParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

CHTLParser::ProgramContext* CHTLParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, CHTLParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(153);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4750019082590210) != 0)) {
      setState(150);
      topLevelStatement();
      setState(155);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(156);
    match(CHTLParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TopLevelStatementContext ------------------------------------------------------------------

CHTLParser::TopLevelStatementContext::TopLevelStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CHTLParser::ConfigurationBlockContext* CHTLParser::TopLevelStatementContext::configurationBlock() {
  return getRuleContext<CHTLParser::ConfigurationBlockContext>(0);
}

CHTLParser::NamespaceDeclarationContext* CHTLParser::TopLevelStatementContext::namespaceDeclaration() {
  return getRuleContext<CHTLParser::NamespaceDeclarationContext>(0);
}

CHTLParser::ImportStatementContext* CHTLParser::TopLevelStatementContext::importStatement() {
  return getRuleContext<CHTLParser::ImportStatementContext>(0);
}

CHTLParser::TemplateDeclarationContext* CHTLParser::TopLevelStatementContext::templateDeclaration() {
  return getRuleContext<CHTLParser::TemplateDeclarationContext>(0);
}

CHTLParser::CustomDeclarationContext* CHTLParser::TopLevelStatementContext::customDeclaration() {
  return getRuleContext<CHTLParser::CustomDeclarationContext>(0);
}

CHTLParser::OriginBlockContext* CHTLParser::TopLevelStatementContext::originBlock() {
  return getRuleContext<CHTLParser::OriginBlockContext>(0);
}

CHTLParser::HtmlElementContext* CHTLParser::TopLevelStatementContext::htmlElement() {
  return getRuleContext<CHTLParser::HtmlElementContext>(0);
}

CHTLParser::StyleBlockContext* CHTLParser::TopLevelStatementContext::styleBlock() {
  return getRuleContext<CHTLParser::StyleBlockContext>(0);
}

CHTLParser::ScriptBlockContext* CHTLParser::TopLevelStatementContext::scriptBlock() {
  return getRuleContext<CHTLParser::ScriptBlockContext>(0);
}

CHTLParser::CommentContext* CHTLParser::TopLevelStatementContext::comment() {
  return getRuleContext<CHTLParser::CommentContext>(0);
}


size_t CHTLParser::TopLevelStatementContext::getRuleIndex() const {
  return CHTLParser::RuleTopLevelStatement;
}

void CHTLParser::TopLevelStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTopLevelStatement(this);
}

void CHTLParser::TopLevelStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTopLevelStatement(this);
}

CHTLParser::TopLevelStatementContext* CHTLParser::topLevelStatement() {
  TopLevelStatementContext *_localctx = _tracker.createInstance<TopLevelStatementContext>(_ctx, getState());
  enterRule(_localctx, 2, CHTLParser::RuleTopLevelStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(168);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(158);
      configurationBlock();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(159);
      namespaceDeclaration();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(160);
      importStatement();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(161);
      templateDeclaration();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(162);
      customDeclaration();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(163);
      originBlock();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(164);
      htmlElement();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(165);
      styleBlock();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(166);
      scriptBlock();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(167);
      comment();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConfigurationBlockContext ------------------------------------------------------------------

CHTLParser::ConfigurationBlockContext::ConfigurationBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CHTLParser::ConfigurationItemContext *> CHTLParser::ConfigurationBlockContext::configurationItem() {
  return getRuleContexts<CHTLParser::ConfigurationItemContext>();
}

CHTLParser::ConfigurationItemContext* CHTLParser::ConfigurationBlockContext::configurationItem(size_t i) {
  return getRuleContext<CHTLParser::ConfigurationItemContext>(i);
}


size_t CHTLParser::ConfigurationBlockContext::getRuleIndex() const {
  return CHTLParser::RuleConfigurationBlock;
}

void CHTLParser::ConfigurationBlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConfigurationBlock(this);
}

void CHTLParser::ConfigurationBlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConfigurationBlock(this);
}

CHTLParser::ConfigurationBlockContext* CHTLParser::configurationBlock() {
  ConfigurationBlockContext *_localctx = _tracker.createInstance<ConfigurationBlockContext>(_ctx, getState());
  enterRule(_localctx, 4, CHTLParser::RuleConfigurationBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(170);
    match(CHTLParser::T__0);
    setState(171);
    match(CHTLParser::T__1);
    setState(175);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CHTLParser::T__5

    || _la == CHTLParser::IDENTIFIER) {
      setState(172);
      configurationItem();
      setState(177);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(178);
    match(CHTLParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConfigurationItemContext ------------------------------------------------------------------

CHTLParser::ConfigurationItemContext::ConfigurationItemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CHTLParser::ConfigKeyContext* CHTLParser::ConfigurationItemContext::configKey() {
  return getRuleContext<CHTLParser::ConfigKeyContext>(0);
}

CHTLParser::ConfigValueContext* CHTLParser::ConfigurationItemContext::configValue() {
  return getRuleContext<CHTLParser::ConfigValueContext>(0);
}

std::vector<CHTLParser::NameConfigItemContext *> CHTLParser::ConfigurationItemContext::nameConfigItem() {
  return getRuleContexts<CHTLParser::NameConfigItemContext>();
}

CHTLParser::NameConfigItemContext* CHTLParser::ConfigurationItemContext::nameConfigItem(size_t i) {
  return getRuleContext<CHTLParser::NameConfigItemContext>(i);
}


size_t CHTLParser::ConfigurationItemContext::getRuleIndex() const {
  return CHTLParser::RuleConfigurationItem;
}

void CHTLParser::ConfigurationItemContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConfigurationItem(this);
}

void CHTLParser::ConfigurationItemContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConfigurationItem(this);
}

CHTLParser::ConfigurationItemContext* CHTLParser::configurationItem() {
  ConfigurationItemContext *_localctx = _tracker.createInstance<ConfigurationItemContext>(_ctx, getState());
  enterRule(_localctx, 6, CHTLParser::RuleConfigurationItem);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(194);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CHTLParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 1);
        setState(180);
        configKey();
        setState(181);
        match(CHTLParser::T__3);
        setState(182);
        configValue();
        setState(183);
        match(CHTLParser::T__4);
        break;
      }

      case CHTLParser::T__5: {
        enterOuterAlt(_localctx, 2);
        setState(185);
        match(CHTLParser::T__5);
        setState(186);
        match(CHTLParser::T__1);
        setState(190);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == CHTLParser::IDENTIFIER) {
          setState(187);
          nameConfigItem();
          setState(192);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(193);
        match(CHTLParser::T__2);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConfigKeyContext ------------------------------------------------------------------

CHTLParser::ConfigKeyContext::ConfigKeyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CHTLParser::ConfigKeyContext::IDENTIFIER() {
  return getToken(CHTLParser::IDENTIFIER, 0);
}


size_t CHTLParser::ConfigKeyContext::getRuleIndex() const {
  return CHTLParser::RuleConfigKey;
}

void CHTLParser::ConfigKeyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConfigKey(this);
}

void CHTLParser::ConfigKeyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConfigKey(this);
}

CHTLParser::ConfigKeyContext* CHTLParser::configKey() {
  ConfigKeyContext *_localctx = _tracker.createInstance<ConfigKeyContext>(_ctx, getState());
  enterRule(_localctx, 8, CHTLParser::RuleConfigKey);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(196);
    match(CHTLParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConfigValueContext ------------------------------------------------------------------

CHTLParser::ConfigValueContext::ConfigValueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CHTLParser::ConfigValueContext::STRING_LITERAL() {
  return getToken(CHTLParser::STRING_LITERAL, 0);
}

tree::TerminalNode* CHTLParser::ConfigValueContext::NUMBER() {
  return getToken(CHTLParser::NUMBER, 0);
}

tree::TerminalNode* CHTLParser::ConfigValueContext::BOOLEAN() {
  return getToken(CHTLParser::BOOLEAN, 0);
}

CHTLParser::ConfigValueArrayContext* CHTLParser::ConfigValueContext::configValueArray() {
  return getRuleContext<CHTLParser::ConfigValueArrayContext>(0);
}


size_t CHTLParser::ConfigValueContext::getRuleIndex() const {
  return CHTLParser::RuleConfigValue;
}

void CHTLParser::ConfigValueContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConfigValue(this);
}

void CHTLParser::ConfigValueContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConfigValue(this);
}

CHTLParser::ConfigValueContext* CHTLParser::configValue() {
  ConfigValueContext *_localctx = _tracker.createInstance<ConfigValueContext>(_ctx, getState());
  enterRule(_localctx, 10, CHTLParser::RuleConfigValue);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(202);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CHTLParser::STRING_LITERAL: {
        enterOuterAlt(_localctx, 1);
        setState(198);
        match(CHTLParser::STRING_LITERAL);
        break;
      }

      case CHTLParser::NUMBER: {
        enterOuterAlt(_localctx, 2);
        setState(199);
        match(CHTLParser::NUMBER);
        break;
      }

      case CHTLParser::BOOLEAN: {
        enterOuterAlt(_localctx, 3);
        setState(200);
        match(CHTLParser::BOOLEAN);
        break;
      }

      case CHTLParser::T__6: {
        enterOuterAlt(_localctx, 4);
        setState(201);
        configValueArray();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConfigValueArrayContext ------------------------------------------------------------------

CHTLParser::ConfigValueArrayContext::ConfigValueArrayContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CHTLParser::ConfigArrayItemContext *> CHTLParser::ConfigValueArrayContext::configArrayItem() {
  return getRuleContexts<CHTLParser::ConfigArrayItemContext>();
}

CHTLParser::ConfigArrayItemContext* CHTLParser::ConfigValueArrayContext::configArrayItem(size_t i) {
  return getRuleContext<CHTLParser::ConfigArrayItemContext>(i);
}


size_t CHTLParser::ConfigValueArrayContext::getRuleIndex() const {
  return CHTLParser::RuleConfigValueArray;
}

void CHTLParser::ConfigValueArrayContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConfigValueArray(this);
}

void CHTLParser::ConfigValueArrayContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConfigValueArray(this);
}

CHTLParser::ConfigValueArrayContext* CHTLParser::configValueArray() {
  ConfigValueArrayContext *_localctx = _tracker.createInstance<ConfigValueArrayContext>(_ctx, getState());
  enterRule(_localctx, 12, CHTLParser::RuleConfigValueArray);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(204);
    match(CHTLParser::T__6);
    setState(205);
    configArrayItem();
    setState(210);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CHTLParser::T__7) {
      setState(206);
      match(CHTLParser::T__7);
      setState(207);
      configArrayItem();
      setState(212);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(213);
    match(CHTLParser::T__8);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConfigArrayItemContext ------------------------------------------------------------------

CHTLParser::ConfigArrayItemContext::ConfigArrayItemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CHTLParser::ConfigArrayItemContext::IDENTIFIER() {
  return getToken(CHTLParser::IDENTIFIER, 0);
}

tree::TerminalNode* CHTLParser::ConfigArrayItemContext::STRING_LITERAL() {
  return getToken(CHTLParser::STRING_LITERAL, 0);
}

